fix: Ensure search form elements align properly.

--- a/themes/kelpie/sass/components/_search-form.scss
+++ b/themes/kelpie/sass/components/_search-form.scss
@@ -5,19 +5,26 @@
 .search-form {
 	display: flex;
 	margin-bottom: get($spacing, 'm');
+	@include content-block();
+	text-align: center;
 	width: 100%;
 
 	label {
 		flex-grow: 1;
+		margin-bottom: 0;
+		width: 100%;
 	}
 }
 
 .search-field {
 	@include textfield();
+	
 	width: 100%;
 }
 
-.search-submit {
+input[type="submit"].search-submit {
 	@include button();
 	margin-left: -2px; // To put the input + button together.
+	padding-bottom: get($spacing, 'xxs');
+	padding-top: get($spacing, 'xxs');
 }
